<resources>
    <string name="app_name">BasketValorations_app</string>
    <string name="action_settings">Settings</string>
    <string name="action_guardar">Save</string>
    <string name="action_editar">Edit</string>
    <string name="action_compartir">Share</string>
    <string name="action_volver">Back</string>
    <string name="title_activity_valorations">Valorations</string>
    <string name="start">start</string>
    <string name="rebounds">rebounds</string>
    <string name="rebounds_abr">REB</string>
    <string name="fouls">fouls</string>
    <string name="fouls_abr">FO</string>
    <string name="steals">steals</string>
    <string name="steals_abr">STE</string>
    <string name="blocks">blocks</string>
    <string name="blocks_abr">BL</string>
    <string name="assistances">assistances</string>
    <string name="assistances_abr">AS</string>
    <string name="losses">losses</string>
    <string name="losses_abr">LOS</string>
    <string name="team">TEAM</string>
    <string name="sust">replace</string>
    <string name="title_activity_activity_sustituir">Replace players</string>
    <string name="title_activity_contra">Initial values</string>

    <string name="date_field">DATE: </string>
    <string name="team_field">TEAM: </string>
    <string name="load_team">LOAD</string>
    <string name="save_team">SAVE</string>
    <string name="add">ADD</string>
    <string name="rival_field">RIVAL: </string>
    <string name="new_match">NEW MATCH</string>
    <string name="edit">EDIT</string>
    <string name="show">SHOW</string>
    <string name="players">PLAYERS</string>
    <string name="minimum">min</string>
    <string name="string_players">Add players (min. 5)</string>
    <string name="nothing_save">Matches not found</string>
    <string name="date">DATE</string>
    <string name="title_activity_web_viewer">WebViewerActivity</string>

    <string name="send_message">Hi, Its attached the valorations result from the match</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="hello_world">Hello world!</string>


</resources>
